--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,20 +13,29 @@ Experiment with deleting lines of code from the CSS to see how it affects the we
                         width: 1000px;
                         height: 1200px;
                         margin-bottom: 20px;
+                        margin-left: 200px;
                         font-size: 28px;
                         background-color: #ffff66;
-                        text-align: left;
+                        text-align: center;
                         color: blue;
                         align-self: auto;
+                        text-align: center;
                         ;
                     }
                     
                     .startBtn {
                         height: 50px;
                         width: 200px;
+                        margin-left: 100px;
                         font-family: Arial, Helvetica, sans-serif;
                         font-size: 32px;
                         background-color: pink;
+                    }
+                    
+                    .question-results {
+                        margin-left: 100px;
+                        font-family: Arial, Helvetica, sans-serif;
+                        font-size: 30px;
                     }
                     
                     h1 {
