--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,44 +1,51 @@
-                    /**
+                                    /**
  First External CSS Stylesheet
  **/
-                    /*
+                                    /*
 Each of these CSS elements is associated with an HTML Element, Class, or ID.
 Flip between this CSS file and the HTML to see how things line up.
 Experiment with deleting lines of code from the CSS to see how it affects the webpage when you refresh in the browser.
 */
-                    
-                    .container {
-                        padding: 20px;
-                        margin: 0;
-                        width: 1000px;
-                        height: 1200px;
-                        margin-bottom: 20px;
-                        margin-left: 200px;
-                        font-size: 28px;
-                        background-color: #ffff66;
-                        text-align: center;
-                        color: blue;
-                        align-self: auto;
-                        text-align: center;
-                        ;
-                    }
-                    
-                    .startBtn {
-                        height: 50px;
-                        width: 200px;
-                        margin-left: 100px;
-                        font-family: Arial, Helvetica, sans-serif;
-                        font-size: 32px;
-                        background-color: pink;
-                    }
-                    
-                    .question-results {
-                        margin-left: 100px;
-                        font-family: Arial, Helvetica, sans-serif;
-                        font-size: 30px;
-                    }
-                    
-                    h1 {
-                        font-family: Helvetica;
-                        font-size: 64px
-                    }
+                                    
+                                    #wrapper {
+                                        padding: 20px;
+                                        margin: 0;
+                                        width: 1000px;
+                                        height: 1200px;
+                                        margin-bottom: 20px;
+                                        margin-left: 200px;
+                                        font-size: 20px;
+                                        background-color: #ffff66;
+                                        text-align: center;
+                                        color: blue;
+                                        align-self: auto;
+                                        ;
+                                    }
+                                    
+                                    #start {
+                                        height: 50px;
+                                        width: 200px;
+                                        margin-left: 100px;
+                                        font-family: Arial, Helvetica, sans-serif;
+                                        font-size: 32px;
+                                        background-color: pink;
+                                    }
+                                    
+                                    #end {
+                                        height: 50px;
+                                        width: 200px;
+                                        font-family: Arial, Helvetica, sans-serif;
+                                        font-size: 32px;
+                                        background-color: pink;
+                                    }
+                                    
+                                    #subwrapper {
+                                        margin-left: 100px;
+                                        font-family: Arial, Helvetica, sans-serif;
+                                        font-size: 20px;
+                                    }
+                                    
+                                    h1 {
+                                        font-family: Helvetica;
+                                        font-size: 64px
+                                    }
